[package]
name = "scanwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.9.6" # to watch file creation
notify = "4.0"
notify-rust = "4" # to display desktop notifications
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
log = "0.4"
env_logger = "0.9"
dirs = "4.0"
