[package]
name = "scanwatch"
version = "0.5.0"
edition = "2021"
authors = ["sreblov <code@sreblov.de>"]
description = "simple utility to watch a directory for new or modified files and execute specific actions such as forwarding the file to a printer"

[dependencies]
notify = "4.0" # to watch file creation
notify-rust = "4" # to display desktop notifications
serde = "1.0" # for serialization of toml files
serde_derive = "1.0" # for serialization of toml files
toml = "0.5" # for reading the configuration file
log = "0.4" # for logging, obviously
env_logger = "0.9"
dirs = "4.0" # for accessing the xdg config file dir and the user home dir
regex = "1.0"
